<resources>
    <string name="app_name">TouristTrips</string>

    <!--Drawer layout fragment names-->
    <string name="currentTripFragment_name">Current Trip</string>
    <string name="locationsFragment_name">All Locations</string>
    <string name="routesFragment_name">All Routes</string>
    <string name="myLocationsFragment_name">My Locations</string>
    <string name="myRoutesFragment_name">My Routes</string>
    <string name="settingsFragment_name">Settings</string>
    <string name="editLocationFragment_name">Edit Location</string>
    <string name="homeFragment_name">Home</string>
    <string name="locationFragment_name">Location</string>
    <string name="editRouteFragment_name">Edit Route</string>
    <string name="routeFragment_name">Route</string>
    <string name="locationSelectionFragment_name">Location Selection</string>
    <string name="routeMapFragment_name">Route Map</string>
    <string name="locationMapFragment_name">Location Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="image_url">Image Url</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="type">Type</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="locations">Locations</string>
    <string name="upload_locations">Upload locations</string>
    <string name="map">Map</string>
    <string name="header_image">Header Image</string>
    <string name="search">Search</string>
    <string name="location_search">Location Search</string>
    <string name="time_to_visit">Time To Visit</string>
    <string name="price">Price</string>
    <string name="apply">Apply</string>
    <string name="sort">Sort</string>
    <string name="sort_order">Sort order</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>


</resources>