<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/sortOrderHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/sortByRadioGroup"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortTypeHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/sortTypeGroup"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortOrderHeaderTextView" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/sortByRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <RadioGroup
            android:id="@+id/sortTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/divider1">

            <RadioButton
                android:id="@+id/ascendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/descendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descending" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/sortByRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1">

            <RadioButton
                android:id="@+id/titleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <RadioButton
                android:id="@+id/cityRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <RadioButton
                android:id="@+id/typeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <RadioButton
                android:id="@+id/timeToVisitRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_to_visit" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>