<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/my_routes_graph">

    <fragment
        android:id="@+id/currentTripFragment"
        android:name="com.example.touristtrips.CurrentTripFragment"
        android:label="@string/currentTripFragment_name"
        tools:layout="@layout/fragment_current_trip" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.touristtrips.presentation.settings.SettingsFragment"
        android:label="@string/settingsFragment_name"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.touristtrips.HomeFragment"
        android:label="@string/homeFragment_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_locations_graph"
            app:destination="@id/locations_graph" />
    </fragment>
    <fragment
        android:id="@+id/addLocationFragment"
        android:name="com.example.touristtrips.presentation.my_locations.locations.AddEditLocationFragment"
        android:label="@string/editLocationFragment_name"
        tools:layout="@layout/fragment_add_edit_location" >
        <argument
            android:name="locationId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_addLocationFragment_to_locationFragment"
            app:destination="@id/myLocationFragment" />
        <action
            android:id="@+id/action_addLocationFragment_to_myLocationsFragment"
            app:destination="@id/my_locations_graph" />
    </fragment>
    <fragment
        android:id="@+id/myLocationFragment"
        android:name="com.example.touristtrips.presentation.my_locations.locations.MyLocationFragment"
        android:label="@string/locationFragment_name"
        tools:layout="@layout/fragment_location" >
        <argument
            android:name="locationId"
            app:argType="string" />
        <action
            android:id="@+id/action_locationFragment_to_addLocationFragment"
            app:destination="@id/addLocationFragment" />
        <action
            android:id="@+id/action_myLocationFragment_to_locationMapsFragment"
            app:destination="@id/locationMapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditRouteFragment"
        android:name="com.example.touristtrips.presentation.my_routes.route.AddEditRouteFragment"
        android:label="@string/editRouteFragment_name"
        tools:layout="@layout/fragment_add_edit_route">
        <argument
            android:name="routeId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_addEditRouteFragment_to_myRoutesFragment"
            app:destination="@id/my_routes_graph" />
    </fragment>
    <fragment
        android:id="@+id/myRouteFragment"
        android:name="com.example.touristtrips.presentation.my_routes.route.MyRouteFragment"
        android:label="@string/routeFragment_name"
        tools:layout="@layout/fragment_route" >
        <argument
            android:name="routeId"
            app:argType="string" />
        <argument
            android:name="locationToAddId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_routeFragment_to_addEditRouteFragment"
            app:destination="@id/addEditRouteFragment" />
        <action
            android:id="@+id/action_routeFragment_to_routeLocationSelectionFragment"
            app:destination="@id/routeLocationSelectionFragment" />
        <action
            android:id="@+id/action_routeFragment_to_routeMapsFragment"
            app:destination="@id/routeMapsFragment" />
        <action
            android:id="@+id/action_routeFragment_to_locationFragment"
            app:destination="@id/myLocationFragment" />
    </fragment>
    <fragment
        android:id="@+id/routeLocationSelectionFragment"
        android:name="com.example.touristtrips.presentation.my_routes.route.RouteLocationSelectionFragment"
        android:label="@string/locationSelectionFragment_name"
        tools:layout="@layout/fragment_route_location_selection" >
        <argument
            android:name="routeId"
            app:argType="string" />
        <action
            android:id="@+id/action_routeLocationSelectionFragment_to_routeFragment"
            app:destination="@id/myRouteFragment" />
    </fragment>
    <fragment
        android:id="@+id/routeMapsFragment"
        android:name="com.example.touristtrips.presentation.shared.routes.route_map.RouteMapsFragment"
        android:label="@string/routeMapFragment_name"
        tools:layout="@layout/fragment_route_maps" >
        <argument
            android:name="myRouteId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="routeId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/routeFragment"
        android:name="com.example.touristtrips.presentation.remote_routes.routes.RouteFragment"
        android:label="@string/routeFragment_name"
        tools:layout="@layout/fragment_route">
        <argument
            android:name="routeId"
            app:argType="string" />
        <action
            android:id="@+id/action_routeFragment_to_routeMapsFragment"
            app:destination="@id/routeMapsFragment" />
        <action
            android:id="@+id/action_routeFragment_to_locationFragment"
            app:destination="@id/locationFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationMapsFragment"
        android:name="com.example.touristtrips.presentation.shared.locations.location_map.LocationMapsFragment"
        android:label="@string/locationMapFragment_name"
        tools:layout="@layout/fragment_location_maps" >
        <argument
            android:name="myLocationId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="locationId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.touristtrips.presentation.remote_locations.locations.LocationFragment"
        android:label="@string/locationFragment_name"
        tools:layout="@layout/fragment_location">
        <argument
            android:name="locationId"
            app:argType="string" />
        <action
            android:id="@+id/action_locationFragment_to_locationMapsFragment"
            app:destination="@id/locationMapsFragment" />
    </fragment>
    <navigation android:id="@+id/locations_graph"
        app:startDestination="@id/locationsFragment">

        <fragment
            android:id="@+id/locationsFragment"
            android:name="com.example.touristtrips.presentation.remote_locations.locations.LocationsFragment"
            android:label="@string/locationsFragment_name"
            tools:layout="@layout/fragment_locations">
            <action
                android:id="@+id/action_locationsFragment_to_locationFragment2"
                app:destination="@id/locationFragment" />
            <action
                android:id="@+id/action_locationsFragment_to_sortOrderBottomSheetDialogFragment"
                app:destination="@id/sortOrderBottomSheetLocationsFragment" />
        </fragment>
        <dialog
            android:id="@+id/sortOrderBottomSheetLocationsFragment"
            android:name="com.example.touristtrips.presentation.remote_locations.locations.SortBottomSheetLocationsFragment"
            android:label="SortOrderBottomSheetDialogFragment" />
    </navigation>
    <navigation android:id="@+id/my_locations_graph"
        app:startDestination="@id/myLocationsFragment">
        <fragment
            android:id="@+id/myLocationsFragment"
            android:name="com.example.touristtrips.presentation.my_locations.all_locations_list.MyLocationsFragment"
            android:label="@string/myLocationsFragment_name"
            tools:layout="@layout/fragment_my_locations">
            <action
                android:id="@+id/action_myLocationsFragment_to_addLocationFragment"
                app:destination="@id/addLocationFragment" />
            <action
                android:id="@+id/action_myLocationsFragment_to_locationFragment"
                app:destination="@id/myLocationFragment" />
            <action
                android:id="@+id/action_myLocationsFragment_to_sortBottomSheetMyLocationsFragment"
                app:destination="@id/sortBottomSheetMyLocationsFragment" />
        </fragment>
        <dialog
            android:id="@+id/sortBottomSheetMyLocationsFragment"
            android:name="com.example.touristtrips.presentation.my_locations.all_locations_list.SortBottomSheetMyLocationsFragment"
            android:label="SortBottomSheetMyLocationsFragment" />
    </navigation>
    <navigation android:id="@+id/routes_graph"
        app:startDestination="@id/routesFragment">
        <fragment
            android:id="@+id/routesFragment"
            android:name="com.example.touristtrips.presentation.remote_routes.routes.RoutesFragment"
            android:label="@string/routesFragment_name"
            tools:layout="@layout/fragment_routes">
            <action
                android:id="@+id/action_routesFragment_to_routeFragment"
                app:destination="@id/routeFragment" />
            <action
                android:id="@+id/action_routesFragment_to_sortBottomSheetRoutesFragment"
                app:destination="@id/sortBottomSheetRoutesFragment" />
        </fragment>
        <dialog
            android:id="@+id/sortBottomSheetRoutesFragment"
            android:name="com.example.touristtrips.presentation.remote_routes.routes.SortBottomSheetRoutesFragment"
            android:label="SortBottomSheetRoutesFragment" />
    </navigation>
    <navigation android:id="@+id/my_routes_graph"
        app:startDestination="@id/myRoutesFragment">
        <fragment
            android:id="@+id/myRoutesFragment"
            android:name="com.example.touristtrips.presentation.my_routes.all_routes_list.MyRoutesFragment"
            android:label="@string/myRoutesFragment_name"
            tools:layout="@layout/fragment_my_routes">
            <action
                android:id="@+id/action_myRoutesFragment_to_addEditRouteFragment"
                app:destination="@id/addEditRouteFragment" />
            <action
                android:id="@+id/action_myRoutesFragment_to_routeFragment"
                app:destination="@id/myRouteFragment" />
            <action
                android:id="@+id/action_myRoutesFragment_to_sortBottomSheetMyRoutesFragment"
                app:destination="@id/sortBottomSheetMyRoutesFragment" />
        </fragment>
        <dialog
            android:id="@+id/sortBottomSheetMyRoutesFragment"
            android:name="com.example.touristtrips.presentation.my_routes.all_routes_list.SortBottomSheetMyRoutesFragment"
            android:label="SortBottomSheetMyRoutesFragment" />
    </navigation>

</navigation>